css/admin_melusine.css  Améliorations d'affichage des cadres en édition / couleurs css/style.css  Bug d'overflow corrigé (on cache ce qui dépasse)
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@86318 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/galaxie_melusine/melusine/trunk/css/admin_melusine.css
+++ b/galaxie_melusine/melusine/trunk/css/admin_melusine.css
@@ -16,7 +16,7 @@
 .button.config_melusine 
 {
     display: inline-block;
-    color:#C0392B;
+    color: /*red;*/	#C0392B;
 }
 
 /* -------------------------------------*/
@@ -27,10 +27,10 @@
 .zbloc .nom_zbloc 
 {
     display: block;
-    background: #c0392b;
+/*    background: #c0392b;*/
     position: relative;
     /*top: -24px;*/
-    z-index:350;
+    z-index:0;
     color:white;
     /*width: 12em;*/
     font-weight: bold;
@@ -66,8 +66,11 @@
 /* ------------- */
 .zbloc .formulaire_deplacer_module form p.nom_module 
 {
-    display: inline-block;
-    font-size: 8px;
+    display: block;
+    font-size: 10px;
+	margin-top: -10px;
+/*	vertical-align: top;*/
+	overflow:hidden;
 }
 /* Position */
 /* -------- */
@@ -111,6 +114,7 @@
 {
     display: inline;
 }
+
 /* Menu des modules */
 /* ---------------- */
 .zbloc .formulaire_deplacer_module
@@ -121,16 +125,21 @@ top:0px;
 height:50px;
 width:100%;
 /*background-color:#ecf0f1;*/
-background-color:#C0C0C0;
+background-color:#DDDDDD; /*gris clair moyen*/
 left:0px;
 }
-
 .admin_zbloc.top
 {
-    background: #c0392b;
-    color:#c0392b;
+/*	color:#c0392b;*/
+	background-image: linear-gradient(180deg, #c0392b, #f0f0f0);
 }
-
+.admin_zbloc .nom_zbloc {
+    background:  #c0392b;
+	z-index: 0;
+/*	opacity: 0.9;*/
+}
+.row { padding-top:0px }
+ 
 
 /* --------------------------------*/
 /* --------------------------------*/
@@ -148,7 +157,7 @@ left:0px;
 .zbloc.admin_melusine 
 {
     /*background-color: rgba(255,255,255,1);*/
-    border: 2px dotted #27AE60;
+    border: 2px dotted green /*#27AE60*/;
     /* Avant, on enlevait la transparence par défaut*/
     /*-webkit-opacity: 1;
     -moz-opacity: 1;
@@ -161,14 +170,19 @@ left:0px;
 .zbloc.admin_melusine .nom_zbloc 
 {
     display: block;
-    background: #27AE60;
+    background: green /*#27AE60*/;
     position: relative;
     /*top: -24px;*/
-    z-index:350;
+    z-index:0;
     color:white;
     /*width: 12em;*/
     font-weight: bold;
     height:24px;;
+}
+
+.zbloc.admin_melusine .top
+{
+	background-image: linear-gradient(180deg, green, #f0f0f0);
 }
 
 /* Les actions: uniformiser, etc... passent au vert */
@@ -176,7 +190,7 @@ left:0px;
 .zbloc.admin_melusine .button.config_melusine
 {
     display: inline-block;
-    color:#27AE60;
+    color: green /*#27AE60*/;
 }
 
 
