--- a/galaxie_melusine/melusine/trunk/css/style.css
+++ b/galaxie_melusine/melusine/trunk/css/style.css
@@ -157,6 +157,7 @@ a.ong1{border:0px solid!important;}
 
 .module_content {
  	padding:5px;
+	overflow:hidden;
 }
 
 .melusine-modules_article_mots a { display: inline-flex; }
